--- a/intro/1_intro.ipynb
+++ b/intro/1_intro.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Введение в JavaScript\n",
     "\n",
@@ -18,100 +19,108 @@
     "* Наличие механизма автоматического приведения типов\n",
     "* Автоматическая сборка мусора\n",
     "* Использование анонимных функций"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Внедрение кода JavaScript в документ HTML можно выполнить двумя способами:\n",
     "\n",
     "1. Размещение кода непосредственно в HTML-файле\n",
     "2. Размещение кода в отдельном файле"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "При размещении кода внутри HTML-файла код JavaScript обрамляется тэгом `<script>`, пример:\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "<html>\r\n",
-    " <head>\r\n",
-    "  <title>Страница с примером кода JavaScript</title>\r\n",
-    "  <script>\r\n",
-    "   alert(\"Hello World!\");\r\n",
-    "  </script>\r\n",
-    " </head>\r\n",
-    " <body>\r\n",
-    "  Это текст основной страницы\r\n",
-    " </body>\r\n",
-    "</html>"
-   ],
-   "outputs": [],
    "metadata": {
     "dotnet_interactive": {
      "language": "html"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.html"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "<html>\n",
+    "  <head>\n",
+    "    <title>Страница с примером кода JavaScript</title>\n",
+    "    <script>\n",
+    "      alert(\"Hello World!\");\n",
+    "    </script>\n",
+    "  </head>\n",
+    "  <body>\n",
+    "    Это текст основной страницы\n",
+    "  </body>\n",
+    "</html>"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "При размещении JavaScript-кода в отдельном файле, создадим файл с названием `myscript.js` и поместим в него код:"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "alert(\"Hello World!\");"
-   ],
-   "outputs": [],
    "metadata": {
     "dotnet_interactive": {
      "language": "javascript"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.javascript"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "alert(\"Hello World!\");"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "А вызов кода из тела основного HTML-файла теперь будет выглядеть вот так:"
-   ],
    "metadata": {
     "dotnet_interactive": {
      "language": "html"
     }
-   }
+   },
+   "source": [
+    "А вызов кода из тела основного HTML-файла теперь будет выглядеть вот так:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "<html>\r\n",
-    "  <head>\r\n",
-    "    <title>Страница с примером кода JavaScript</title> \r\n",
-    "    <script src=\"./myscript.js\"></script>\r\n",
-    "  </head> \r\n",
-    "  <body>\r\n",
-    "    Это текст основной страницы\r\n",
-    "  </body> \r\n",
-    "</html>"
-   ],
-   "outputs": [],
    "metadata": {
     "dotnet_interactive": {
      "language": "html"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.html"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "<html>\n",
+    "  <head>\n",
+    "    <title>Страница с примером кода JavaScript</title> \n",
+    "    <script src=\"./myscript.js\"></script>\n",
+    "  </head> \n",
+    "  <body>\n",
+    "    Это текст основной страницы\n",
+    "  </body> \n",
+    "</html>"
+   ]
   }
  ],
  "metadata": {
