--- a/intro/1_intro.ipynb
+++ b/intro/1_intro.ipynb
@@ -51,6 +51,7 @@
    },
    "outputs": [],
    "source": [
+    "#!html\n",
     "<html>\n",
     "  <head>\n",
     "    <title>Страница с примером кода JavaScript</title>\n",
@@ -84,6 +85,7 @@
    },
    "outputs": [],
    "source": [
+    "#!javascript\n",
     "alert(\"Hello World!\");"
    ]
   },
@@ -111,6 +113,7 @@
    },
    "outputs": [],
    "source": [
+    "#!html\n",
     "<html>\n",
     "  <head>\n",
     "    <title>Страница с примером кода JavaScript</title> \n",
